--- a/docs/_posts/2019-11-12-ELMo-post.md
+++ b/docs/_posts/2019-11-12-ELMo-post.md
@@ -1,10 +1,24 @@
 ---
 layout: post
-title: Learnin ELMo: Easy as Tickling Some Monster
+title: Learning ELMo: Easy as Tickling Some Monster
 ---
 
+This should be the begininign of the ELMo post, now I'm not super sure how this works, so lets try a bunch of stuff
+
+
+# THis is a title, should be quite big
+
+## This is a smaller title
+
+### Even smaller
+
+
+Lets try to make some list now:
+- one thing
+- two thing
+- three thing
+
+
+
 Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
-
-![_config.yml]({{ site.baseurl }}/images/config.png)
-
 The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the [Jekyll Now repository](https://github.com/barryclark/jekyll-now) on GitHub.
