--- a/docs/_posts/2019-11-12-ELMo-post.md
+++ b/docs/_posts/2019-11-12-ELMo-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Learning ELMo: Easy as Tickling Some Monster
+title: Learning ELMo Easy as Tickling Some Monster
 ---
 
 This should be the begininign of the ELMo post, now I'm not super sure how this works, so lets try a bunch of stuff
@@ -18,7 +18,38 @@ Lets try to make some list now:
 - two thing
 - three thing
 
+Now my link to google is this link [lol link here](https://www.google.com/)
+
+Thi word might be in **bold** and this one might be in *italic*.
+
+More list:
+
+* Item 1
+* Item 2
+  * Item 2a
+  * Item 2b
+
+Another list
+
+1. Item 1
+1. Item 2
+1. Item 3
+   1. Item 3a
+   1. Item 3b
+
+As Kanye West said:
+
+> We're living the future so
+> the present is our past.
 
 
-Next you can update your site name, avatar and other options using the _config.yml file in the root of your repository (shown below).
-The easiest way to make your first post is to edit this one. Go into /_posts/ and update the Hello World markdown file. For more instructions head over to the [Jekyll Now repository](https://github.com/barryclark/jekyll-now) on GitHub.
+I think you should use an
+`<addr>` element here instead.
+
+
+First Header | Second Header
+------------ | -------------
+Content from cell 1 | Content from cell 2
+Content in the first column | Content in the second column
+
+![_config.yml]({{ site.baseurl }}/images/config.png)
