--- a/docs/_posts/2019-11-12-ELMo-post.md
+++ b/docs/_posts/2019-11-12-ELMo-post.md
@@ -18,7 +18,9 @@ Lets try to make some list now:
 - two thing
 - three thing
 
-Now my link to google is this link [lol link here](https://www.google.com/)
+Now my link to google is this link [lol link here](https://allennlp.org/elmo)
+
+<a href="http://example.com/" target="_blank">example with link in new tab, cant be done in markdown itself</a>
 
 Thi word might be in **bold** and this one might be in *italic*.
 
@@ -52,4 +54,12 @@ First Header | Second Header
 Content from cell 1 | Content from cell 2
 Content in the first column | Content in the second column
 
+
 ![_config.yml]({{ site.baseurl }}/images/config.png)
+
+
+|   |   |   |   |   |
+|---|---|---|---|---|
+|   |   |   |   |   |
+|   |   |   |   |   |
+|   |   |   |   |   |
