--- a/docs/_posts/2019-11-12-ELMo-post.md
+++ b/docs/_posts/2019-11-12-ELMo-post.md
@@ -6,6 +6,57 @@ title: Learning ELMo Easy as Tickling Some Monster
 This should be the begininign of the ELMo post, now I'm not super sure how this works, so lets try a bunch of stuff
 
 
+
+
+## Big Idea
+
+If you had to summarize ELMo in two sentences, this might be the best way to do so:
+
+
+
+## Model
+
+### Building Blocks
+
+Two main features:
+- Bidirectional LSTMs
+- Character Convolutions
+
+### Example Walkthrough
+
+
+### Overview of Architecture
+
+
+
+## ELMo Training
+
+
+
+
+## Task-specific ELMo
+
+### Question Answering
+
+
+
+## Paper Results
+
+
+
+## Further Work with ELMo
+
+
+
+## References
+
+
+
+
+
+
+
+
 # THis is a title, should be quite big
 
 ## This is a smaller title
