Added background section on attention mechanisms and encoder-decoder networks.

--- a/docs/_posts/2019-11-15-BERT-post.md
+++ b/docs/_posts/2019-11-15-BERT-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: BERT: Using Bidirectional Information for Language Understanding
+title: BERT Using Bidirectional Information for Language Understanding
 ---
 
 Since being introduced to the world by Google in 2018, BERT has taken the natural language processing community by storm.
@@ -28,10 +28,10 @@ High level overview of what the network is?
 [insert picture of the architecture here]
 
 Quick stats of the small, basic BERT network:
-- # of layers: 12
-- # of nodes in hidden layers: 768
-- # of self-attention heads: 12
-- # of parameters: 110M
+- number of layers: 12
+- number of nodes in hidden layers: 768
+- number of self-attention heads: 12
+- number of parameters: 110M
 
 Describe each of these statistics, and what they mean. It is worth noting that it is possible to increase these statistics to create a larger, and more powerful, network that achieves better output results.
 
